--- a/themes/mytheme/templates/index.html
+++ b/themes/mytheme/templates/index.html
@@ -4,7 +4,7 @@
 <section class="home-hero">
   <div class="hero-inner">
     <div class="hero-media">
-      <img src="/images/hero-graphic.svg" alt="hero graphic" class="hero-graphic">
+      <img src="/images/hero-graphic.jpg" alt="hero graphic" class="hero-graphic">
       <div class="hero-content">
         <h1 class="hero-title">{{ SITENAME }}</h1>
         <p class="hero-sub">{{ SITE_DESCRIPTION }}</p>
